--- a/webapp/package.json
+++ b/webapp/package.json
@@ -40,6 +40,7 @@
     "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "image-webpack-loader": "^6.0.0",
+    "marked": "^1.1.1",
     "mini-css-extract-plugin": "^0.11.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
@@ -48,6 +49,7 @@
     "raw-loader": "^4.0.1",
     "react-refresh": "^0.8.3",
     "sass-loader": "^10.0.1",
+    "shiki": "^0.2.2",
     "terser-webpack-plugin": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
