--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,41 +20,40 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-react": "^7.10.4",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.2",
-    "eslint": "^7.7.0",
+    "eslint": "^7.8.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "image-webpack-loader": "^6.0.0",
     "marked": "^1.1.1",
     "mini-css-extract-plugin": "^0.11.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^4.0.1",
     "react-refresh": "^0.8.3",
-    "sass-loader": "^10.0.1",
+    "sass-loader": "^10.0.2",
     "shiki": "^0.2.2",
     "terser-webpack-plugin": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "^2.2.0",
-    "webpack-node-externals": "^2.5.2"
+    "webpack-manifest-plugin": "^2.2.0"
   }
 }
